--- a/walmart/src/main/resources/application.properties
+++ b/walmart/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 #spring boot properties
-#Fri Jul 14 07:30:48 EDT 2017
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=root
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# Configuring the connection to Mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.url=jdbc\:mysql\://localhost/websystique
+
+# Configuring JPA and Hibernate
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
