--- a/walmart/src/main/resources/application.properties
+++ b/walmart/src/main/resources/application.properties
@@ -1,14 +1,10 @@
-#spring boot properties
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-
-# Configuring the connection to Mysql
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/websystique
 spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc\:mysql\://localhost/websystique
-
-# Configuring JPA and Hibernate
+spring.datasource.password=root
+spring.datasource.testWhileIdle=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
